--- a/datamine/lang/Chineses_xml.pak/text_ui_Endgame.xml
+++ b/datamine/lang/Chineses_xml.pak/text_ui_Endgame.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-12-01T11:35:38Z</Created>
-  <LastSaved>2020-12-01T11:35:38Z</LastSaved>
+  <Created>2020-12-15T08:28:39Z</Created>
+  <LastSaved>2020-12-15T08:28:39Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13665</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -1006,7 +1006,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_narrative2_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">After the assault on the Republic’s drake-taming operation, the Republic commander, Lucan, has proved unwilling to provide any information on what they were doing in the Wilds, or how they were able to get their hands on Oshara’s drakes. Despite attempts at beating the information out of him, Lucan does not seem to feel pain. To get the information out of him, you will need your alchemists to flush the pain-blocking chemicals from his system with a concoction of their own.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;The Mission 'What Lies Below' will be unlocked.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">在进行过对共和国驯龙行动的袭击之后，帝国指挥官，卢坎，在进一步的审讯中拒绝提供任何关于他们在荒野中采取行动的信息，对他们猎取奥沙拉飞龙的方法也绝口不提。尽管有人想要通过刑讯从他身上套出点消息来，但是卢坎就好像完全感受不到痛苦一般。为了从他身上得到信息，你需要让你的炼金术士配置一种混合药剂来解除他身上止痛剂的影响。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;结果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;任务：‘追查’将解锁。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">在进行过对共和国驯龙行动的袭击之后，帝国指挥官，卢坎，在进一步的审讯中拒绝提供任何关于他们在荒野中采取行动的信息，对他们猎取奥沙拉飞龙的方法也绝口不提。尽管有人想要通过刑讯从他身上套出点消息来，但是卢坎就好像完全感受不到痛苦一般。为了从他身上得到信息，你需要让你的炼金术士配置一种混合药剂来解除他身上止痛剂的影响。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;效果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;解锁任务“追查”。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_narrative2_expedition_desc</Data></Cell>
@@ -1041,7 +1041,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_narrative3_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Oshara is lost. The Cult of the Aberrant’s ritual could not be stopped in time to save her. Now she has been corrupted by a hunger for flesh, instilled in her by the Fallen Lord, Ashtaroth. Reports have been received from survivors of Oshara’s rampage, scattered all over Stormfall’s territory. Ilthain believes that she will find somewhere to rest, and carve out a territory for herself. In order to find this territory, scouts will need to be dispatched.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;The Mission 'Ashfall' will be unlocked.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">奥沙拉失踪了。我们没能及时阻止畸变者邪教的仪式并拯救她。现在她被堕落领主，阿什塔罗特所蛊惑，因贪恋血肉而腐化了。在奥沙拉造成的破坏中侥幸逃生的幸存者已经向我们发来了报告，来源遍布暴风港全境。伊尔坦相信她肯定会找一个地方休息，并且为自己辟出一片领地。为了找到她的领地，你需要派出侦察队。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;结果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;任务‘灰烬’将解锁。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">奥沙拉失踪了。我们没能及时阻止畸变者邪教的仪式并拯救她。现在她被堕落领主，阿什塔罗特所蛊惑，因贪恋血肉而腐化了。在奥沙拉造成的破坏中侥幸逃生的幸存者已经向我们发来了报告，来源遍布暴风港全境。伊尔坦相信她肯定会找一个地方休息，并且为自己辟出一片领地。为了找到她的领地，你需要派出侦察队。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;效果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;解锁任务“灰烬”。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_narrative3_expedition_desc</Data></Cell>
@@ -1076,7 +1076,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_consumable1_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Bloodmoss grows in the Stormfall Wilds. The moss is named so for the blood that drips from its extremities, said to be the same blood as the creature who died on the soil it sprouted from. Should you wish to relive the assault that took place that day in the Wilds, an alchemist will acquire the Bloodmoss in the Wilds and mix it with the dust of a drake’s tooth. Consuming the resulting substance should invoke the memory.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;You will acquire a Reverie that enables you to replay the Mission ‘The Only Lead’.\nThe difficulty will be increased, and rewards will be greater.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">血苔生长在暴风港的野外。这种苔藓得名于其末梢流出的血液，据说这些血液和苔藓生长前死在当地生物的血液是相同的。如果你想要重历当时发生的袭击，炼金术士就会前往野外采集血苔，并将其与龙牙的粉末混合在一起。这样制成的混合物应该能回溯当时的记忆。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;结果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;你将可以获得一份幻想香。它能让你重新进行任务“唯一的线索”。\n任务难度将会提高，任务奖励也会更加丰厚。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">血苔生长在暴风港的野外。这种苔藓得名于其末梢流出的血液，据说这些血液和苔藓生长前死在当地生物的血液是相同的。如果你想要重历当时发生的袭击，炼金术士就会前往野外采集血苔，并将其与龙牙的粉末混合在一起。这样制成的混合物应该能回溯当时的记忆。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;效果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;你将可以获得一份幻想香。它能让你重新进行任务“唯一的线索”。\n任务难度将会提高，任务奖励也会更加丰厚。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_consumable1_reward</Data></Cell>
@@ -1101,7 +1101,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_consumable2_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">A special kind of reed grows in the Garadalug Bowels. A reed born from the region's mutation at the hands of Ashtaroth’s servants. Spores lie heavy on the already stifling air, said to drive those that remain in its haze into a state of reverie. Should you wish to relive that day’s attempt to save Oshara, an alchemist will acquire this special reed and mix it with the dust of a drake’s tooth. Consuming the resulting substance should invoke the memory.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;You will acquire a Reverie that enables you to replay the Mission ‘What Lies Below’.\nThe difficulty will be increased, and rewards will be greater.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">一种生长在伽若德拉格迷宫的特殊芦苇。由当地生长的芦苇在阿什塔罗特的仆从们手中发生突变形成。芽孢沉陷在几乎让人窒息的空气中，据说能够让那些进入它造成薄雾中的人陷入回忆的幻境中。如果你想要回溯到尝试拯救奥沙拉的那一天，炼金术士会为你采来这种芦苇，并将其与龙牙的粉末混合在一起。这样制成的混合物应该能回溯当时的记忆。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;结果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;你将可以获得一份幻想香。它能让你重新进行任务“追查”。\n任务的难度将会提升，其奖励也会变得更加丰厚。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;”</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">一种生长在伽若德拉格迷宫的特殊芦苇。由当地生长的芦苇在阿什塔罗特的仆从们手中发生突变形成。芽孢沉陷在几乎让人窒息的空气中，据说能够让那些进入它造成薄雾中的人陷入回忆的幻境中。如果你想要回溯到尝试拯救奥沙拉的那一天，炼金术士会为你采来这种芦苇，并将其与龙牙的粉末混合在一起。这样制成的混合物应该能回溯当时的记忆。\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;效果：&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;你将可以获得一份幻想香。它能让你重新进行任务“追查”。\n任务的难度将会提升，其奖励也会变得更加丰厚。&lt;/font&gt;&lt;br&gt;&lt;/br&gt;”</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_consumable2_reward</Data></Cell>
