--- a/datamine/lang/french_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/french_xml.pak/text_ui_Loot.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-23T14:30:15Z</Created>
-  <LastSaved>2020-11-23T14:30:15Z</LastSaved>
+  <Created>2020-12-15T08:28:47Z</Created>
+  <LastSaved>2020-12-15T08:28:47Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -3717,7 +3717,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_Armor_Mage_Greaves_T7</Data></Cell>
     <Cell ss:StyleID="s30"><Data ss:Type="String">C'tulian Scales Stockings</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Bas d'écailles C'tuliennes</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Bas d'écailles c'tuliennes</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_Armor_Mage_Sollerets_T7</Data></Cell>
