--- a/datamine/lang/hungarian_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/hungarian_xml.pak/text_ui_Activeskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-24T09:43:11Z</Created>
-  <LastSaved>2020-11-24T09:43:11Z</LastSaved>
+  <Created>2020-12-15T08:28:44Z</Created>
+  <LastSaved>2020-12-15T08:28:44Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -9435,8 +9435,8 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_SmokeBomb_variant_1_desc</Data></Cell>
-    <Cell ss:StyleID="s24"><Data ss:Type="String">Duskshroud can be used on the targeted location.</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Az Alkonylepel megidézhető a célba vett helyszínre.</Data></Cell>
+    <Cell ss:StyleID="s24"><Data ss:Type="String">Duskshroud can be used on the targeted Ally.</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Az Alkonylepel megidézhető a célba vett szövetségesen.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_Variant_SmokeBomb_variant_2</Data></Cell>
