--- a/datamine/lang/polish_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/polish_xml.pak/text_ui_Loot.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-24T09:43:11Z</Created>
-  <LastSaved>2020-11-24T09:43:11Z</LastSaved>
+  <Created>2020-12-15T08:28:49Z</Created>
+  <LastSaved>2020-12-15T08:28:49Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -1127,7 +1127,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_delivrance_axe_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;On the Kuei Empire coast, he headed the Republican Liberator fleet with his unit of shieldbearers against the city of Tourmica. Landing on the shores, his scythe led the Republic’s expansion. Dashing from skirmish to skirmish, he cut through soldiers like wheat as the shieldbearers absorbed counter-strikes. In the melee, his unit became surrounded by enemy cavalry. The scythe ignited with lightning as he swung in a wide circle, arcs of electricity paralysing the horses. The fallen riders were swiftly decapitated, the electrified blade cauterising their severed necks. A master of death, they called him The Reaper.&lt;/i&gt;&lt;/font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Na wybrzeżu Imperium Kuei, dowodził flotą Republikańskich Wyzwolicieli wraz z jednostką tarczowników przeciwko miastu Tourmica. Lądując na wybrzeżach, jego kosa przewodziła ekspansji Republiki. Pędząc od potyczki do potyczki, przecinał żołnierzy jak pszenicę, podczas gdy tarczownicy absorbowali kontrataki. W zwarciu jego jednostka została otoczona przez wrogą kawalerię. Kosa zaświeciła od błyskawicy, gdy zatoczył szeroki krąg, przenosząc elektryczne łuki, które iskrzyły i paraliżowały konie. Spadający jeźdźcy szybko zostawali pozbawieni głowy, a naelektryzowane ostrze kauteryzowało ich przecięte szyje. Był panem śmierci, a nazywali go Żniwiarzem.&lt;/i&gt;&lt;/font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Na wybrzeżu Imperium Kuei, dowodził flotą republikańskich wyzwolicieli wraz z jednostką tarczowników przeciwko miastu Tourmica. Lądując na wybrzeżach, jego kosa przewodziła ekspansji Republiki. Pędząc od potyczki do potyczki, przecinał żołnierzy jak pszenicę, podczas gdy tarczownicy absorbowali kontrataki. W zwarciu jego jednostka została otoczona przez wrogą kawalerię. Kosa zaświeciła od błyskawicy, gdy zatoczył szeroki krąg, przenosząc elektryczne łuki, które iskrzyły i paraliżowały konie. Spadający jeźdźcy szybko zostawali pozbawieni głowy, a naelektryzowane ostrze kauteryzowało ich przecięte szyje. Był panem śmierci, a nazywali go Żniwiarzem.&lt;/i&gt;&lt;/font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_unique_shadow_catalyst</Data></Cell>
@@ -1882,7 +1882,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_copper_boots_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;As the Republic continues its campaign of conquest, the earth trembles at their might.This 'noble' crusade threatens the great Kingdom of Varg and its clans. Many clans, from established dynasties to reclusive sects, refuse to cooperate due to petty disputes.\n\nThe Bronze Wolves are a militia created by Countess Odelia, recruiting soldiers across Varg to face the Republican menace. She aims to unite the clans with political guile and bargaining to amass an unbeatable army, with burnished bronze armor so lustrous that its shine can be seen for miles.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Ziemia drży pod potęgą Republiki, kontynuującej kampanię podboju..Ta &quot;słuszna&quot; krucjata grozi wielkiemu Królestwu Varg oraz jego klanom. Wiele z nich, od uznanych dynastii po marne sekty odmawia współpracy przez drobne sprzeczki.\n\nBrązowe Wilki są milicją stworzoną przez Hrabinę Odelię, rekrutującą żołnierzy z całego Varg, aby stawić czoła Republikańskiej zarazie. Pragnie ona zjednoczyć klany pod jedną polityczną doktryną i zgromadzić armię nie do pokonania, z tak wspaniale wypolerowanymi pancerzami, że ich blask będzie lśnił na odlegle mile.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Ziemia drży pod potęgą Republiki, kontynuującej kampanię podboju..Ta &quot;słuszna&quot; krucjata grozi wielkiemu Królestwu Varg oraz jego klanom. Wiele z nich, od uznanych dynastii po marne sekty odmawia współpracy przez drobne sprzeczki.\n\nBrązowe Wilki są milicją stworzoną przez Hrabinę Odelię, rekrutującą żołnierzy z całego Varg, aby stawić czoła republikańskiej zarazie. Pragnie ona zjednoczyć klany pod jedną polityczną doktryną i zgromadzić armię nie do pokonania, z tak wspaniale wypolerowanymi pancerzami, że ich blask będzie lśnił na odlegle mile.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_shaman_shoulder</Data></Cell>
@@ -1962,7 +1962,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_figurehead_boots_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;When Arran Brightgale drove off the Republican occupation in Lejre, he unknowingly rescued a delegation of blacksmiths from Vulkaïn. These skilled metalworkers thanked him with a full suit of armor made in their lava-forged style. The platelegs anchored Arran to the ground, and roused him with flashes of ancient victories in the midst of great horrors.\n\nThough he couldn’t charge as he once had, being so heavy, the material made him an immovable eye of the storm on the frontlines.&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Gdy Arran Brightgale wyjechał spod Republikańskiej okupacji Lejre, nieświadomie uratował delegację kowali z Vulkaïn. Ci wykwalifikowani specjaliści podziękowali mu, wyposażając go w pełną, wykutą w lawie zbroję. Płytowe elementy na nogach zakotwiczały Arrana w ziemi i w dramatycznych sytuacjach pobudzały wspomnieniami starożytnych zwycięstw.\n\nChociaż nie był w stanie atakować tak jak kiedyś, ponieważ był zbyt ciężki, to jednak ten materiał sprawił, że stał się istnym niewzruszonym okiem cyklonu na liniach frontu.&#10;&#10;&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot; Color=&quot;#ccb270&quot;&gt;&lt;i&gt;Gdy Arran Brightgale wyjechał spod republikańskiej okupacji Lejre, nieświadomie uratował delegację kowali z Vulkaïn. Ci wykwalifikowani specjaliści podziękowali mu, wyposażając go w pełną, wykutą w lawie zbroję. Płytowe elementy na nogach zakotwiczały Arrana w ziemi i w dramatycznych sytuacjach pobudzały wspomnieniami starożytnych zwycięstw.\n\nChociaż nie był w stanie atakować tak jak kiedyś, ponieważ był zbyt ciężki, to jednak ten materiał sprawił, że stał się istnym niewzruszonym okiem cyklonu na liniach frontu.&#10;&#10;&lt;/i&gt;&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_necromancer_shoulder</Data></Cell>
@@ -4227,17 +4227,17 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_ic_PotionActiveEffect</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">%1 (on use)</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">%1 (przy użyciu)</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">%1 (po użyciu)</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_ic_PotionPassiveEffect</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">%1 (on use, lasts %2)</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">%1 (przy użyciu, trwa %2)</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">%1 (po użyciu, trwa %2)</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_ic_PotionPassiveEffect_stack</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">%1 (on use, lasts %2, stackable up to %3 times)</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">%1 (przy użyciu, trwa %2, kumuluje się do %3 razy)</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">%1 (po użyciu, trwa %2, kumuluje się do %3 razy)</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_ic_PotionPermanentEffect</Data></Cell>
