--- a/datamine/lang/polish_xml.pak/text_ui_passiveskills.xml
+++ b/datamine/lang/polish_xml.pak/text_ui_passiveskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-24T09:43:14Z</Created>
-  <LastSaved>2020-11-24T09:43:14Z</LastSaved>
+  <Created>2020-12-15T08:28:47Z</Created>
+  <LastSaved>2020-12-15T08:28:47Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -202,7 +202,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_PSTUI_RemoveButton</Data></Cell>
     <Cell ss:StyleID="s24"><Data ss:Type="String">Reassign</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Przypisanie ponowne</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Zmień</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_PSTUI_RemoveMode_Description</Data></Cell>
@@ -1881,8 +1881,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_ELEM_5_desc</Data></Cell>
-    <Cell ss:StyleID="s27"><Data ss:Type="String">Increase the number of ailment stacks applied to an enemy and decrease non damage-over-time.</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Zwiększyć liczbę kumulacji dolegliwości nakładanych na przeciwnika i zmniejsza obrażenia, które nie są zadawane w czasie.</Data></Cell>
+    <Cell ss:StyleID="s27"><Data ss:Type="String">Increase the number of ailment stacks applied to an enemy</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Zwiększa liczbę kumulacji dolegliwości nakładanych na przeciwnika</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_ELEM_6_name</Data></Cell>
@@ -3502,7 +3502,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ORAC_9_desc</Data></Cell>
     <Cell ss:StyleID="s29"><Data ss:Type="String">Increase the number of simultaneous Accords.</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Zwiększyć liczbę równoczesnych 'Woli'.</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Zwiększa liczbę równoczesnych 'Woli'.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ORAC_10_name</Data></Cell>
@@ -4122,7 +4122,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ASSA_7_name</Data></Cell>
     <Cell ss:StyleID="s29"><Data ss:Type="String">Integrated Immaterial Shields</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Zintegrowane Tarcze Niematerialne</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Zintegrowane Niematerialne Tarcze</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ASSA_8_name</Data></Cell>
@@ -4167,7 +4167,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ASSA_14_name</Data></Cell>
     <Cell ss:StyleID="s29"><Data ss:Type="String">Integrated Immaterial Shields</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Zintegrowane Tarcze Niematerialne</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Zintegrowane Niematerialne Tarcze</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ASSA_15_name</Data></Cell>
@@ -4177,7 +4177,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ASSA_16_name</Data></Cell>
     <Cell ss:StyleID="s29"><Data ss:Type="String">Integrated Immaterial Shields</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Zintegrowane Tarcze Niematerialne</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Zintegrowane Niematerialne Tarcze</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s22"><Data ss:Type="String">ui_ASSA_17_name</Data></Cell>
