--- a/datamine/lang/Russian_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/Russian_xml.pak/text_ui_Loot.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-24T09:43:19Z</Created>
-  <LastSaved>2020-11-24T09:43:19Z</LastSaved>
+  <Created>2020-12-15T08:28:53Z</Created>
+  <LastSaved>2020-12-15T08:28:53Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -1727,7 +1727,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_glove_argandsheart</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Argand’s Hearth</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Сердце Арганда</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Очаг Арганда</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_unique_glove_argandsheart_lore</Data></Cell>
@@ -6552,7 +6552,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="127.5">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent1_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Rerolls all magic effects when used on an item.\nIt will consume all socketed gems to guarantee a magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Изменяет все магические эффекты при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Изменяет все магические свойства при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent1_lore</Data></Cell>
@@ -6567,7 +6567,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent2_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Removes a random magic effect and adds another when used on an item.\nIt will consume all socketed gems to guarantee a new magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.&#10;&#10;\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайный магический эффект и добавляет новый при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайное магическое свойство и добавляет новое при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="51">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent2_lore</Data></Cell>
@@ -6582,7 +6582,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent3_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Adds a new random magic effect when used on an item.\nIt will consume all socketed gems to guarantee a new magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.&#10;&#10;\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Добавляет новый магический эффект при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Добавляет новое магическое свойство при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent3_lore</Data></Cell>
@@ -6597,7 +6597,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent4_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Removes a random magic effect when used on an item.\nIt will consume all socketed gems to guarantee keeping a magic effect whose type is chosen randomly among all the types of gems on the item. Greater gems power allow the keeping of higher level magic effects.&#10;\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайный магический эффект при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного сохранения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете. Самоцветы высоких рангов позволяют сохранить высокоуровневые магические эффекты.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайное магическое свойство при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного сохранения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете. Самоцветы высоких рангов позволяют сохранить высокоуровневые магические эффекты.\n\nДанный предмет не может быть использован на легендарных и уникальных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="89.25">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent4_lore</Data></Cell>
@@ -6612,7 +6612,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent1_leg_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Rerolls all magic effects when used on an item.\nIt will consume all socketed gems to guarantee a magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.\n\nThis item can only be applied on legendary items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Изменяет все магические эффекты при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Изменяет все магические свойства при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent2_legendary_name</Data></Cell>
@@ -6622,7 +6622,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent2_leg_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Removes a random magic effect and adds another when used on an item.\nIt will consume all socketed gems to guarantee a new magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.&#10;&#10;\n\nThis item can only be applied on legendary items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайный магический эффект и добавляет новый при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайное магическое свойство и добавляет новое при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent3_legendary_name</Data></Cell>
@@ -6632,7 +6632,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent3_leg_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Adds a new random magic effect when used on an item.\nIt will consume all socketed gems to guarantee a new magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.&#10;&#10;\n\nThis item can only be applied on legendary items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Добавляет новый магический эффект при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Добавляет новое магическое свойство при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного получения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent4_legendary_name</Data></Cell>
@@ -6642,7 +6642,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_reagent4_leg_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Removes a random magic effect when used on an item.\nIt will consume all socketed gems to guarantee keeping a magic effect whose type is chosen randomly among all the types of gems on the item. Greater gems power allow the keeping of higher level magic effects.&#10;&#10;\n\nThis item can only be applied on legendary items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайный магический эффект при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного сохранения эффекта, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете. Самоцветы высоких рангов позволяют сохранить высокоуровневые магические эффекты.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Удаляет случайное магическое свойство при использовании на предмете.\nРасходует все самоцветы в гнёздах для гарантированного сохранения свойства, зависящего от ранга и типа самоцветов, выбираемого случайно из всех типов самоцветов в предмете. Самоцветы высоких рангов позволяют сохранить высокоуровневые магические эффекты.\n\nДанный предмет может быть использован только на легендарных предметах.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s25"><Data ss:Type="String">Endgame Consumables</Data></Cell>
@@ -6827,12 +6827,12 @@
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_consumable_narrative1_name</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">Reverie Incense: Bloodmoss</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Reverie Incense: Bloodmoss</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Фимиам мечты: Кровостой</Data></Cell>
    </Row>
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_consumable_narrative1_desc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">Access a harder version of the Mission 'The Only Lead'.</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Access a harder version of the Mission 'The Only Lead'.</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Доступ к сложной версии миссии &quot;Единственная зацепка&quot;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="89.25">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_consumable_narrative1_lore</Data></Cell>
@@ -6847,7 +6847,7 @@
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_consumable_narrative2_desc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">Access a harder version of the Mission 'What Lies Below'.</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Access a harder version of the Mission 'What Lies Below'.</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Доступ к сложной версии миссии &quot;Что лежит ниже&quot;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="114.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_consumable_narrative2_lore</Data></Cell>
@@ -6862,7 +6862,7 @@
    <Row>
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_consumable_narrative3_desc</Data></Cell>
     <Cell ss:StyleID="s32"><Data ss:Type="String">Access a harder version of the Mission 'Ashfall'.</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Access a harder version of the Mission 'Ashfall'.</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Доступ к сложной версии миссии &quot;Пеплопад&quot;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="89.25">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_consumable_narrative3_lore</Data></Cell>
