--- a/datamine/lang/german_xml.pak/text_ui_Endgame.xml
+++ b/datamine/lang/german_xml.pak/text_ui_Endgame.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-24T09:43:02Z</Created>
-  <LastSaved>2020-11-24T09:43:02Z</LastSaved>
+  <Created>2020-12-15T08:28:51Z</Created>
+  <LastSaved>2020-12-15T08:28:51Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -1366,7 +1366,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_category_hunt_upgrade</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Lost Equipment Recovery</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Verlorene wiederhergestellte Ausrüstung</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Verlorene Ausrüstung</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_category_restock_merchants</Data></Cell>
@@ -3795,28 +3795,28 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_1</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 1,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">1.000 Urzeitliche Affinität</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 2,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">2.000 Urzeitliche Affinität</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_2</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 5,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">5.000 Urzeitliche Affinität</Data></Cell>
-   </Row>
-   <Row ss:AutoFitHeight="0">
-    <Cell ss:StyleID="s20"><Data ss:Type="String">ui_gold_to_pa_transfer_3</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Create 10,000 Primordial Affinity</Data></Cell>
     <Cell ss:StyleID="s20"><Data ss:Type="String">10.000 Urzeitliche Affinität</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
+    <Cell ss:StyleID="s20"><Data ss:Type="String">ui_gold_to_pa_transfer_3</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 20,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">20.000 Urzeitliche Affinität</Data></Cell>
+   </Row>
+   <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_4</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 50,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">50.000 Urzeitliche Affinität</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 100,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">100.000 Urzeitliche Affinität</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_5</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 100,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">100.000 Urzeitliche Affinität</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 200,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">200.000 Urzeitliche Affinität</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_pa_to_gold_transfer_lore</Data></Cell>
@@ -3836,7 +3836,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_pa_to_gold_transfer_reward_summary</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Demetra has siphoned Primordial Affinity from your body and given you gold in return.</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Demetra hat dir Urzeitliche Affinität als Gegenleistung für das Gold, eingeflößt.</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Demetra hat hat dir Urzeitliche Affinität entzogen und dir dafür Gold gegeben.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_pa_to_gold_transfer_1</Data></Cell>
@@ -3881,7 +3881,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_gold_to_pa_transfer_reward_summary</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Demetra instilled your body with Primordial Affinity in return for the gold you gave her.</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Demetra hat Urzeitliche Affinität aus deinem Körper abgesaugt und dir dafür Gold gegeben.</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Demetra flößte deinem Körper die Urzeitliche Affinität ein, als Gegenleistung für das Gold, das du ihr gegeben hast.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_dark_market_buy_reagent</Data></Cell>
