--- a/datamine/lang/hungarian_xml.pak/text_ui_passiveskills.xml
+++ b/datamine/lang/hungarian_xml.pak/text_ui_passiveskills.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-24T09:43:09Z</Created>
-  <LastSaved>2020-11-24T09:43:09Z</LastSaved>
+  <Created>2020-12-15T08:28:46Z</Created>
+  <LastSaved>2020-12-15T08:28:46Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -1881,8 +1881,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_ELEM_5_desc</Data></Cell>
-    <Cell ss:StyleID="s27"><Data ss:Type="String">Increase the number of ailment stacks applied to an enemy and decrease non damage-over-time.</Data></Cell>
-    <Cell ss:StyleID="s19"><Data ss:Type="String">Megnöveli az egy ellenfélnek okozott állapothatás halmok számát, és csökkenti a nem az idő múlásával sebzőket.</Data></Cell>
+    <Cell ss:StyleID="s27"><Data ss:Type="String">Increase the number of ailment stacks applied to an enemy</Data></Cell>
+    <Cell ss:StyleID="s19"><Data ss:Type="String">Megnöveli az egy ellenfélnek okozott állapothatás halmok számát.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_ELEM_6_name</Data></Cell>
