--- a/datamine/lang/polish_xml.pak/text_ui_Endgame.xml
+++ b/datamine/lang/polish_xml.pak/text_ui_Endgame.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-24T09:43:13Z</Created>
-  <LastSaved>2020-11-24T09:43:13Z</LastSaved>
+  <Created>2020-12-15T08:28:51Z</Created>
+  <LastSaved>2020-12-15T08:28:51Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13065</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -511,7 +511,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_expedition_ui_magic_find_bonus</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">%1 Magic Find</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">%1 znajd.przed.magicznych</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">%1 znajd.przed.mag.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_expedition_ui_production_bonus</Data></Cell>
@@ -1086,7 +1086,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_consumable1_reward_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Bloodmoss was picked from the Wilds and brewed into a concoction by your alchemists. The memory of that night in the Wilds, assaulting the Lucan's Republic  encampment, is now available. You need only consume the concoction.</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Krwawy Mech został zebrany z Bezdroży i uwarzony w miksturę przez twoich alchemików. Pamięć o tej nocy w Bezdrożach, ataku na republikańskie obozowisko Lucana, jest już dostępna. Musisz tylko wypić tę miksturę.</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Krwawy Mech został zebrany z Bezdroży i uwarzony w miksturę przez twoich alchemików. Pamięć o tej nocy na Bezdrożach, ataku na republikańskie obozowisko Lucana, jest już dostępna. Musisz tylko wypić miksturę.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s20"><Data ss:Type="String">ui_hunt_consumable1_reward_summary</Data></Cell>
@@ -2146,7 +2146,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s21"><Data ss:Type="String">ui_carrion_keep_seekers_expedition_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">The Republican Purifiers guard their keeps with jealous fervour, and none more than Carrion Keep, which was marked with a distinguishing victory. Grand Inquisitor Heimlock himself reconquered Carrion Keep as a young man, turning it into a symbol more than a fortress. \n\nThat shining insignia is marred. The Republican Forces come in greater numbers everyday, trying to choke some emergence from within the fortress. If only one could find out what that emergence was.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potential Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Loot received: Staffs.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Republikańscy Oczyszczacze strzegą swoich twierdz z zazdrosną żarliwością i nie więcej niż Twierdzę Carrion, która odznaczała się wyróżniającym się zwycięstwem. Wielki Inkwizytor Heimlock sam odzyskał Carrion jako młody człowiek, zamieniając go bardziej w symbol niż fortecę.\n\nTa lśniąca insygnia jest zniszczona. Siły Republikańskie przybywają każdego dnia w większej liczbie, próbując zdławić jakieś pojawienie się wewnątrz twierdzy. Gdyby tylko można było dowiedzieć się, czym było to pojawienie się.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potencjalne wyniki:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Otrzymane łupy: Kostury.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Republikańscy Oczyszczacze strzegą swoich twierdz z zazdrosną żarliwością i nie więcej niż Twierdzę Carrion, która odznaczała się wyróżniającym się zwycięstwem. Wielki Inkwizytor Heimlock sam odzyskał Carrion jako młody człowiek, zamieniając go bardziej w symbol niż fortecę.\n\nTa lśniąca insygnia jest zniszczona. Siły republikańskie przybywają każdego dnia w większej liczbie, próbując zdławić jakieś pojawienie się wewnątrz twierdzy. Gdyby tylko można było dowiedzieć się, czym było to pojawienie się.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potencjalne wyniki:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Otrzymane łupy: Kostury.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s21"><Data ss:Type="String">ui_carrion_keep_seekers_reward</Data></Cell>
@@ -2801,7 +2801,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s21"><Data ss:Type="String">ui_kuei_diplomats_expedition_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">The dense jungle of the Kuei Empire hardly seems inviting to caravans, and yet, a network of roads splits the land into manageable portions. The nation produces dye, wood, and many more materials, while still providing bread to its citizens.\n\nIt’s best to take care on the imperial highways, however. Kuei merchants warn of a bandit group known as the Jade Legion, who’ve emptied many a caravan clean of goods. What’s more, the Republican Liberator forces stick to the roads, knowing better than to try themselves against the jungle.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potential Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Temporary Productivity Boost.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Gęsta dżungla Imperium Kuei nie wydaje się zachęcająca dla karawan, a jednak sieć dróg dzieli kraj na części możliwe do zarządzania. Naród produkuje barwniki, drewno i wiele innych materiałów, a jednocześnie zapewnia chleb swoim obywatelom.\n\nJednak najlepiej dbać o cesarskie magistrale. Kupcy Kuei ostrzegają przed grupą bandytów zwaną Nefrytowym Legionem, którzy opróżnili wiele karawan z towarów. Co więcej, siły Republikańskiego Wyzwoliciela trzymają się dróg, dobrze wiedzą, że lepiej nie próbować się sprzeciwiać dżungli.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potencjalne wyniki:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Tymczasowy wzrost wydajności.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Gęsta dżungla Imperium Kuei nie wydaje się zachęcająca dla karawan, a jednak sieć dróg dzieli kraj na części możliwe do zarządzania. Naród produkuje barwniki, drewno i wiele innych materiałów, a jednocześnie zapewnia chleb swoim obywatelom.\n\nJednak najlepiej dbać o cesarskie magistrale. Kupcy Kuei ostrzegają przed grupą bandytów zwaną Nefrytowym Legionem, którzy opróżnili wiele karawan z towarów. Co więcej, siły republikańskich wyzwolicieli trzymają się dróg, dobrze wiedzą, że lepiej nie próbować się sprzeciwiać dżungli.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potencjalne wyniki:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Tymczasowy wzrost wydajności.&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s21"><Data ss:Type="String">ui_kuei_diplomats_reward</Data></Cell>
@@ -2826,7 +2826,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s21"><Data ss:Type="String">ui_varg_diplomats_expedition_lore</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">The tundras of Varg are being ripped at the seams by a dozen clans, like children fighting over a toy. The royal meadhall’s last attempt at unity came in the shape of a boy, unceremoniously pushed onto the throne.\n\nThe clans suspect outside intervention in this succession, particularly from the Republic. Entering through battlelines with the Republican Liberators is inadvisable, though the ship ride to Varg’s coast will be long. Any expedition risks being met with hostility, but show the food in your palm and the litigants ought to heel.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potential Outcomes:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Loot received: Gold (Large Quantity).&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Tundry Varga są rozrywane w szwach przez tuzin klanów, jak dzieci walczące o zabawkę. Ostatnia próba zjednoczenia królewskiej Sali Miodnej przybrała postać chłopca, bezceremonialnie wepchniętego na tron.\n\nKlany podejrzewają zewnętrzną interwencję w tej sukcesji, szczególnie ze strony Republiki. Przejście przez linie bitewne z Republikańskimi Wyzwolicielami jest niewskazane, choć podróż statkiem na wybrzeże Varg będzie długa. Każda wyprawa może spotkać się z wrogością, ale dobrze posmaruj komuś łapę, a strony zatargu powinny się przechylić.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potencjalne wyniki:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Otrzymane łupy: Złoto (duża ilość).&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Tundry Varga są rozrywane w szwach przez tuzin klanów, jak dzieci walczące o zabawkę. Ostatnia próba zjednoczenia królewskiej Sali Miodnej przybrała postać chłopca, bezceremonialnie wepchniętego na tron.\n\nKlany podejrzewają zewnętrzną interwencję w tej sukcesji, szczególnie ze strony Republiki. Przejście przez linie bitewne republikańskich wyzwolicieli jest niewskazane, choć podróż statkiem na wybrzeże Varg będzie długa. Każda wyprawa może spotkać się z wrogością, ale jak dobrze posmarujesz komuś łapę, strony zatargu powinny przymknąć oko.\n\n&lt;font size=&quot;20&quot; font face=&quot;Wolcen&quot; color=&quot;#509FFF&quot;&gt;Potencjalne wyniki:&lt;/font&gt;&lt;br&gt;&lt;/br&gt;\n&lt;font color=&quot;#509FFF&quot;&gt;Otrzymane łupy: Złoto (duża ilość).&lt;/font&gt;&lt;br&gt;&lt;/br&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s21"><Data ss:Type="String">ui_varg_diplomats_reward</Data></Cell>
@@ -3795,28 +3795,28 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_1</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 1,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 1000 Pierwotnej Więzi</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 2,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 2,000 Pierwotnej Więzi</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_2</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 5,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 5000 Pierwotnej Więzi</Data></Cell>
-   </Row>
-   <Row ss:AutoFitHeight="0">
-    <Cell ss:StyleID="s20"><Data ss:Type="String">ui_gold_to_pa_transfer_3</Data></Cell>
     <Cell ss:StyleID="s28"><Data ss:Type="String">Create 10,000 Primordial Affinity</Data></Cell>
     <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 10,000 Pierwotnej Więzi</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
+    <Cell ss:StyleID="s20"><Data ss:Type="String">ui_gold_to_pa_transfer_3</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 20,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 20,000 Pierwotnej Więzi</Data></Cell>
+   </Row>
+   <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_4</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 50,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 50,000 Pierwotnej Więzi</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 100,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 100,000 Pierwotnej Więzi</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_gold_to_pa_transfer_5</Data></Cell>
-    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 100,000 Primordial Affinity</Data></Cell>
-    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 100,000 Pierwotnej Więzi</Data></Cell>
+    <Cell ss:StyleID="s28"><Data ss:Type="String">Create 200,000 Primordial Affinity</Data></Cell>
+    <Cell ss:StyleID="s20"><Data ss:Type="String">Stwórz 200,000 Pierwotnej Więzi</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s18"><Data ss:Type="String">ui_pa_to_gold_transfer_lore</Data></Cell>
