--- a/datamine/lang/portuguese_xml.pak/text_ui_EIM.xml
+++ b/datamine/lang/portuguese_xml.pak/text_ui_EIM.xml
@@ -9,8 +9,8 @@
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
   <LastAuthor>Pierre Techoueyres</LastAuthor>
-  <Created>2020-11-30T17:18:19Z</Created>
-  <LastSaved>2020-11-30T17:18:19Z</LastSaved>
+  <Created>2020-12-09T10:31:54Z</Created>
+  <LastSaved>2020-12-09T10:31:54Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,8 +18,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>13665</WindowHeight>
-  <WindowWidth>28770</WindowWidth>
+  <WindowHeight>32767</WindowHeight>
+  <WindowWidth>19275</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <ProtectStructure>False</ProtectStructure>
@@ -327,8 +327,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_eim_attack_damage_bonus_from_last_spell</Data></Cell>
-    <Cell ss:StyleID="s25"><Data ss:Type="String">Attacks gain %1 additional Damage as the Damage Type of the last Spell cast during %4s</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Ataques ganham %1 de dano adicional do mesmo tipo de dano do último Feitiço lançado durante %4s</Data></Cell>
+    <Cell ss:StyleID="s25"><Data ss:Type="String">Attacks gain %1 additional Damage as the Damage Type of the last Spell cast during %2s</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Ataques ganham %1 de dano adicional do mesmo tipo de dano do último Feitiço lançado durante %2s</Data></Cell>
     <Cell ss:StyleID="s18"/>
     <Cell ss:StyleID="s18"/>
     <Cell ss:StyleID="s18"/>
@@ -1984,7 +1984,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s19"><Data ss:Type="String">ui_eim_damage_percent_per_enemy_ailment_stack_on_target_kill</Data></Cell>
     <Cell ss:StyleID="s25"><Data ss:Type="String">When you kill an Enemy, you increase the Damage Type corresponding to each Ailment Stack on that Enemy by %1 (up to %2 Stacks per Damage Type)</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Ao matar um inimigo, você aumenta o tipo de dano correspondente a cada Acúmulo de Maldição infligido nele por %1 (até %2 Acúmulos por tipo de dano)</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Ao matar um inimigo, você aumenta o tipo de dano correspondente a cada Acúmulo de Debilidade infligido nele por %1 (até %2 Acúmulos por tipo de dano)</Data></Cell>
     <Cell ss:StyleID="s18"/>
     <Cell ss:StyleID="s18"/>
     <Cell ss:StyleID="s18"/>
@@ -6195,8 +6195,8 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s21"><Data ss:Type="String">ui_eim_stamina_regen_on_critical_hit</Data></Cell>
-    <Cell ss:StyleID="s25"><Data ss:Type="String">Critical Strikes regenerate %1 Stamina</Data></Cell>
-    <Cell ss:StyleID="s18"><Data ss:Type="String">Acertos Críticos regeneram %1 de Estamina</Data></Cell>
+    <Cell ss:StyleID="s25"><Data ss:Type="String">Critical Hits increase your Stamina regeneration rate by %1 during 3s</Data></Cell>
+    <Cell ss:StyleID="s18"><Data ss:Type="String">Acertos Críticos aumentam sua regeneração de Estamina por %1 durante 3 segundos</Data></Cell>
     <Cell ss:StyleID="s18"/>
     <Cell ss:StyleID="s18"/>
     <Cell ss:StyleID="s18"/>
