--- a/datamine/localization/text_ui_passiveskills.xml
+++ b/datamine/localization/text_ui_passiveskills.xml
@@ -16,8 +16,8 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>16725</WindowHeight>
-  <WindowWidth>32767</WindowWidth>
+  <WindowHeight>11565</WindowHeight>
+  <WindowWidth>28800</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <RefModeR1C1/>
@@ -1676,7 +1676,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ELEM_5_desc</Data></Cell>
-    <Cell ss:StyleID="s80"><Data ss:Type="String">Increase the number of ailment stacks applied to an enemy and decrease non damage-over-time.</Data></Cell>
+    <Cell ss:StyleID="s80"><Data ss:Type="String">Increase the number of ailment stacks applied to an enemy</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_ELEM_6_name</Data></Cell>
@@ -3764,11 +3764,11 @@
    </Print>
    <Zoom>115</Zoom>
    <Selected/>
-   <TopRowVisible>663</TopRowVisible>
+   <TopRowVisible>338</TopRowVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
-     <ActiveRow>678</ActiveRow>
+     <ActiveRow>366</ActiveRow>
      <ActiveCol>1</ActiveCol>
     </Pane>
    </Panes>
